--- a/templates/index.html
+++ b/templates/index.html
@@ -221,16 +221,12 @@
   <div class="content">
     <p class="transition hidden">Openflock is a product to promote your opensource projects on GitHub and gain contributors. It also helps you in finding awesome projects or issues to work on.</p>
   </div>
-  
+  <div class="title">
     <i class="dropdown icon"></i>
     What is Openflock Hall of Fame?
   </div>
   <div class="content">
- 
- 
  <p>Openflock Hall of Fame is something where some of the projects which are serving the community in much more better way are shown. If your Open source project is really useful for the community? Fill in this form to get your project on Openflock Hall of Fame.</p>
- 
- 
   </div>
 </div>
    <br><br><br>
